# cargo-read

./: .gitignore  .workongoing  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  justfile
.github/workflows/: ci.yml
src/: api_scan.rs  args.rs  main.rs  rustdoc_render.rs
