[package]
name = "cargo-download"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Download and cache crate source code, designed for LLM tool use"
authors = [
    "Karol Kuczmarski <karol.kuczmarski@gmail.com>",
    "Lilith River <lilith@imazen.io>",
]
keywords = ["cargo", "subcommand", "download", "fetch", "llm"]
license = "MIT"
readme = "README.md"
categories = ["development-tools", "development-tools::cargo-plugins"]
repository = "https://github.com/imazen/cargo-download.git"

[[bin]]
name = "cargo-download"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.9"
semver = "1.0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
ureq = "3.3.0"
